MeetingSdkAgent/MeetingSdkAgent.h

	MEETINGSDKAGENT_API int GetSerialNo(StringStruct* imei);
	MEETINGSDKAGENT_API void SetCallback(PFunc_Callback pFunc_Callback);
	MEETINGSDKAGENT_API int Start(const char * devmodel, char * configPath, int pathLen, Context context);
	MEETINGSDKAGENT_API int SetNpsUrl(StringStruct * npsUrlList, int urlSize);
	MEETINGSDKAGENT_API int Stop();
	MEETINGSDKAGENT_API int Login(const char * nube, int nubeLen, const char * pass, int passLen, const char * deviceType, int dtLen, Context context);
	MEETINGSDKAGENT_API int LoginThirdParty(const char* nube, const char* appkey, const char * uid, Context context);
	MEETINGSDKAGENT_API int LoginViaImei(const char * imei, int imeiLen, Context context);
	MEETINGSDKAGENT_API int IsMeetingExist(int meetingId, Context context);
	MEETINGSDKAGENT_API int GetMeetingList(Context context);
	MEETINGSDKAGENT_API int GetMeetingInfo(int meetId, Context context);
	MEETINGSDKAGENT_API int GetVideoDeviceList(MEETINGMANAGE_VideoDeviceInfo *devInfo, int maxCount);
	MEETINGSDKAGENT_API int GetAudioCaptureDeviceList(StringStruct* devicelist, int listsize);
	MEETINGSDKAGENT_API int GetAudioRenderDeviceList(StringStruct* devicelist, int listsize);
	MEETINGSDKAGENT_API int CreateMeeting(char * appType, int typeLen, Context context);
	MEETING_MANAGE_API int GetJoinMeetingInfo(int meetingId, JoinMeetingInfo * joinMeetingInfo);
	MEETINGSDKAGENT_API int GetSpeakerList(MeetingSpeakerInfo * speakerInfos, int maxCount);
	MEETINGSDKAGENT_API int GetSpeakerInfo(int accountId, MeetingSpeakerInfo * speakerInfo);
	MEETINGSDKAGENT_API int GetMeetingQos(LongStringStruct * outdata);
	MEETINGSDKAGENT_API int GetCurMeetingMode();
	MEETINGSDKAGENT_API bool GetMeetingLockStatus();
	MEETINGSDKAGENT_API int GetParticipants(ParticipantInfo* participants, int maxCount);
	MEETINGSDKAGENT_API int GetMeetingInvitationSMS(int meetId, int inviterPhoneId, const char* inviterName, int inviterNameLen, int meetingType, const char* app, int appLen, int urlType, Context context);
	MEETINGSDKAGENT_API int GetSpeakerVideoStreamParam(int accountId, int resourceID, SpeakerVideoStreamParamData * data);
	MEETINGSDKAGENT_API int BindToken(const char* token, int tokenLen,
		int accountId, const char* accountName,
		int accountNameLen, Context context);
	MEETINGSDKAGENT_API int AsynPlayVideoTest(int colorsps, int fps,
		int width, int height, void * previewWindow, char videoCapName[256]);
	MEETINGSDKAGENT_API void StopVideoTest();
	MEETINGSDKAGENT_API int AsynPlayVideoTestYUVCB(int colorsps, int fps, int width,
		int height, char videoCapName[256], FUN_VIDEO_PREVIEW fun);
	MEETINGSDKAGENT_API int StopVideoTestYUVCB();
	MEETINGSDKAGENT_API int AsynPlaySoundTest(char wavFile[256], char renderName[256]);
	MEETINGSDKAGENT_API void StopPlaySoundTest();
	MEETINGSDKAGENT_API int RecordSoundTest(char micName[256], char wavFile[256]);
 

	MEETINGSDKAGENT_API void StopRecordSoundTest();
	MEETINGSDKAGENT_API int AsynStartNetDiagnosticSerialCheck();
	MEETINGSDKAGENT_API int StopNetBandDetect();
	MEETINGSDKAGENT_API int GetNetBandDetectResult(BandWidthData * bandWidthData);
	MEETINGSDKAGENT_API int ResetMeetingPassword(int meetingid, const char* encode = NULL);
	MEETINGSDKAGENT_API int GetMeetingPassword(int meetingid);
	MEETINGSDKAGENT_API int CheckMeetingHasPassword(int meetingid);
	MEETINGSDKAGENT_API int CheckMeetingPasswordValid(int meetingid,
		const char* encryptcode);
	MEETINGSDKAGENT_API int CreateAndInviteMeeting(char * appType, int typeLen,
		int * inviteeList, int inviteeCount, Context context);
	MEETINGSDKAGENT_API int CreateDatedMeeting(char * appType, int typeLen, unsigned int year,
		unsigned int month, unsigned int day, unsigned int hour,
		unsigned int minute, unsigned int second, const char * endtime,
		const char * topic, const char * encryptcode);
	MEETINGSDKAGENT_API int CreateAndInviteDatedMeeting(char * appType, int typeLen, unsigned int year,
		unsigned int month, unsigned int day, unsigned int hour,
		unsigned int minute, unsigned int second, const char * endtime,
		const char * topic, int * inviteeList, int inviteeCount, const char * encryptcode);
	MEETINGSDKAGENT_API int ModifyMeetingInviters(int meetId, const char * appType, int smsType, int *accountList, int accountNum, Context context);
	MEETINGSDKAGENT_API int GetUserPublishStreamInfo(int accountId,
		MeetingUserStreamInfo * streamsInfo, int maxCount);
	MEETINGSDKAGENT_API int GetCurrentSubscribleStreamInfo(
		MeetingUserStreamInfo * streamsInfo, int maxCount);
	MEETINGSDKAGENT_API int GetParticipantsByPage(ParticipantInfo * participants,
		int pageNum, int countPerPage);
	MEETINGSDKAGENT_API int GetMicSendList(ParticipantInfo* participants, int maxCount);
	MEETINGSDKAGENT_API int SetRkPath(const char* rkPath, int pathLen);